@@ -8,6 +8,7 @@ import lombok.Setter;
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.List;
@@ -38,7 +39,8 @@ public class CommonFunction {
     private static String sendRequest(String reqUrl) {
         try {
             // Create URL object
-            URL url = new URL(reqUrl);
+            URI uri = new URI(reqUrl);
+            URL url = uri.toURL();
             HttpURLConnection connection = (HttpURLConnection) url.openConnection();
 
             // Set request method
